[package]
name = "interactive_fiction_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bracket-lib = "0.8"
rand = "0.8"
serde = "1"
ron = "0.8"
leafwing-input-manager = "=0.13.3"
bevy_tiles = "0.1.0"
bevy_asset_loader = { version = "0.20.1", features = ["2d"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3
